# CmakeMultiChannelPackage

./: readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wsy/cmakemultichannelpackage/: ExampleInstrumentedTest.java
app/src/circle/cpp/: config.h
app/src/circle/java/com/wsy/cmakemultichannelpackage/: Shape.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/wsy/cmakemultichannelpackage/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/rect/cpp/: config.h
app/src/rect/java/com/wsy/cmakemultichannelpackage/: Shape.java
app/src/test/java/com/wsy/cmakemultichannelpackage/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
